# wifi-commissioning-gatt-service

./: .gitignore  CHANGELOG.md  Cargo.toml  Changelog.md  Changelog.txt  LICENSE  README.md
client/: web_ble.html  web_ble.js
docs/: manual_testing.md  sequence_ble_wifi_setup.drawio
src/: main.rs
src/authorize/: mod.rs
src/connect/: interface.rs  mod.rs
src/scan/: mod.rs  scan.rs  scan_utils.rs
systemd/: wifi-commissioning-gatt.service  wifi-commissioning-gatt@.service
