[package]
authors = ["omnect@conplement.de>"]
description = "This experimental service allows wifi commissioning via bluetooth."
edition = "2021"
homepage = "https://www.omnect.io/home"
license = "MIT OR Apache-2.0"
name = "wifi-commissioning-gatt-service"
repository = "git@github.com:omnect/wifi-commissioning-gatt-service.git"
version = "0.4.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1", default-features = false }
bluer = { version = "0.17", default-features = false, features = ["bluetoothd"] }
clap = { version = "4.5", default-features = false, features = ["derive", "std"] }
enclose = { version = "1.1", default-features = false }
env_logger = { version = "0.11", default-features = false }
futures = { version = "0.3", default-features = false }
log = { version = "0.4", default-features = false }
regex = { version = "1.11", default-features = false, features = ["std"] }
sd-notify = { version = "0.4", default-features = false, optional = true }
sha3 = { version = "0.10", default-features = false }
tokio = { version = "1", default-features = false, features = [
    "io-std",
    "io-util",
    "rt-multi-thread",
    "process",
] }
uuid = { version = "1.4", default-features = false }
wpactrl = { version = "0.5", default-features = false }

[build-dependencies]

[dev-dependencies]

[features]
default = ["systemd"]
systemd = ["sd-notify"]
